@startuml

title __NUMBER's Class Diagram__\n

  namespace org.block {
    namespace project.block {
      namespace java.value {
        namespace number {
          class org.block.project.block.java.value.number.IntegerBlock {
              + IntegerBlock()
              + createDialog()
              + getType()
          }
          class org.block.project.block.java.value.number.IntegerBlock.IntegerBlockType {
              + IntegerBlockType()
              + build()
          }
          abstract class org.block.project.block.java.value.number.NumberBlock {
              + NumberBlock()
              + getCodeImports()
              + getExpectedValue()
              + writeCode()
              - init()
          }
          abstract class org.block.project.block.java.value.number.NumberBlock.NumberBlockType {
              - parser : Parser<N>
              + NumberBlockType()
              + build()
              + getName()
              + saveLocation()
              + write()
          }
          class org.block.project.block.java.value.number.NumberBlock.OnClickListener {
              + getEventClass()
              + onEvent()
          }
        }
      }
    }
  }
  

  org.block.project.block.java.value.number.IntegerBlock -up-|> org.block.project.block.java.value.number.NumberBlock
  org.block.project.block.java.value.number.IntegerBlock +-down- org.block.project.block.java.value.number.IntegerBlock.IntegerBlockType
  org.block.project.block.java.value.number.IntegerBlock.IntegerBlockType -up-|> org.block.project.block.java.value.number.NumberBlock.NumberBlockType
  org.block.project.block.java.value.number.NumberBlock .up.|> org.block.project.block.Block.ValueBlock.ConnectedValueBlock.MutableConnectedValueBlock
  org.block.project.block.java.value.number.NumberBlock -up-|> org.block.project.block.java.value.AbstractValue
  org.block.project.block.java.value.number.NumberBlock +-down- org.block.project.block.java.value.number.NumberBlock.NumberBlockType
  org.block.project.block.java.value.number.NumberBlock +-down- org.block.project.block.java.value.number.NumberBlock.OnClickListener
  org.block.project.block.java.value.number.NumberBlock.NumberBlockType .up.|> org.block.project.block.BlockType
  org.block.project.block.java.value.number.NumberBlock.OnClickListener .up.|> org.block.plugin.event.EventListener

@enduml
